[*]#SQUAD-202 - Fix scrollbars

--- a/src/components/Form/TextInput/style.module.sass
+++ b/src/components/Form/TextInput/style.module.sass
@@ -5,19 +5,20 @@
 
 .mapped_emails
   max-height: 200px
-  overflow-y: auto
+  //overflow-y: auto
 
-.mapped_emails::-webkit-scrollbar-track
-  border-radius: 4px
 
-.mapped_emails::-webkit-scrollbar
-  width: 4px
-  background: $scroll
-
-.mapped_emails::-webkit-scrollbar-thumb
-  border-radius: 4px
-  background: $secondary_color
-
-.mapped_emails:hover::-webkit-scrollbar-thumb
-  background: $primary_color
+//.mapped_emails::-webkit-scrollbar-track
+//  border-radius: 4px
+//
+//.mapped_emails::-webkit-scrollbar
+//  width: 4px
+//  background: $scroll
+//
+//.mapped_emails::-webkit-scrollbar-thumb
+//  border-radius: 4px
+//  background: $secondary_color
+//
+//.mapped_emails:hover::-webkit-scrollbar-thumb
+//  background: $primary_color
 
