--- a/src/components/SidebarWrapper/_components/SidebarTeamsProject/_components/SidebarTeamsProjectsFolder/_components/FolderHeadline/style.module.sass
+++ b/src/components/SidebarWrapper/_components/SidebarTeamsProject/_components/SidebarTeamsProjectsFolder/_components/FolderHeadline/style.module.sass
@@ -16,8 +16,7 @@
   &_closed
     opacity: 0
 
-.headline
-  cursor: pointer
+
 
 .headline_text
   color: #9199A9
