--- a/src/components/SidebarWrapper/_components/SidebarTeamsProject/_components/SidebarTeamsProjectsFolder/style.module.sass
+++ b/src/components/SidebarWrapper/_components/SidebarTeamsProject/_components/SidebarTeamsProjectsFolder/style.module.sass
@@ -1,6 +1,9 @@
 .container
   margin-left: 20px
 
+.headline
+  cursor: pointer
+
 .boards_container
   z-index: 10
   max-height: 0
